spec(coverage): 5 sub-agent lessons from BroadleafCommerce run-3 (PR D)
Run-3 was the first real exercise of the multi-module-orchestration protocol
(PR #6). 3 sub-agents were spawned in parallel for files 3-5 of a 5-file batch.
All 3 succeeded, but the run exposed 5 sub-agent protocol gaps that future runs
will hit. This PR documents the lessons and adds a task template that prevents
the gaps.

## The 5 lessons

1. **Inline the validated Maven/JaCoCo command in the sub-agent's task prompt.**
   Sub-agents 4 and 5 both asked 'where is jacoco.exec?' before doing any work.
   Fix: copy the exact working command from the per-run setup artifact, with all
   the flags the pre-flight gates validated. Do not make the sub-agent re-derive it.

2. **Pass the covered-line report to the sub-agent, not the raw source.**
   The discovery of uncovered lines is fast for tiny classes but slow for 100+
   line classes. Fix: parse the JaCoCo CSV (or pytest-cov JSON) for the target
   file's uncovered lines and pass them in the task prompt as 'line N: <desc>'.

3. **Sub-agent success criterion: CSV row delta, not self-reported %.**
   Sub-agent 5 reported '85.5% to 90%' but the actual delta was 0 -- the tests
   it wrote exercised behavior lines but not the Spring-injection lines that
   were the actual gap. Fix: require the sub-agent to read the post-run CSV
   directly and report the exact LINE_MISSED,LINE_COVERED row. Verifiable from
   the outside.

4. **Test files in src/test/groovy/ are NOT auto-staged.**
   Sub-agents created .groovy spec files that ran successfully but were not
   tracked by git. Fix: the task prompt must include a 'stage your files' step
   (git add <files>, git status, git diff --cached --stat). Main agent also
   runs git status after each sub-agent to double-check.

5. **Wait for the runtime completion event; never synthesize it.**
   A premature completion event was synthesized for sub-agent 5 based on a
   stale surefire timestamp. The actual sub-agent wa