@@ -147,3 +147,90 @@ Single-agent mode would be 4-8 hours because the test-writing phase is sequentia
 ## When to abandon and inline
 
 If more than 50% of test-writer batches fail with repair-loop exhaustion, the main agent should **abandon sub-agents** and run the remaining files inline. This is rare but documented so a future agent doesn't get stuck spinning up sub-agents that keep failing.
+
+## Lessons from run-3 (BroadleafCommerce, 2026-06-08)
+
+Run-3 was the first real exercise of this protocol: 3 sub-agents spawned in parallel for files 3-5 of a 5-file batch (files 1-2 were done inline). Results: 3/3 succeeded at or above the 90% target. 22-minute wall-clock for the 3 files (vs ~30 min single-agent in run-2 for the same files — **27% faster**). The following 5 lessons should be applied to future sub-agent invocations.
+
+### Lesson 1 — Inline the validated Maven/JaCoCo command in the sub-agent's task prompt
+
+Sub-agents 4 and 5 both asked "where is jacoco.exec?" and "what's the surefire command?" before they could do any work. That's wasted context-budget.
+
+**Fix:** the main agent's task prompt must include the **exact working command** copied from the per-run setup artifact, with all the flags that the pre-flight gates validated. Don't make the sub-agent re-derive it.
+
+Example template for a Maven+JaCoCo sub-agent:
+
+```bash
+# Pre-validated by the main agent's pre-flight. Do NOT change.
+cd <REPO_DIR>
+mvn -f core/pom.xml -am -B \
+  -DskipITs=true -DfailIfNoTests=false -Dsurefire.failIfNoSpecifiedTests=false \
+  -Dtest=<FileUnderTest>Spec \
+  "-Dsurefire.argLine=-javaagent:/data/.m2/repository/org/jacoco/org.jacoco.agent/0.8.13/org.jacoco.agent-0.8.13-runtime.jar=destfile=\${project.basedir}/target/jacoco.exec --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED" \
+  test-compile surefire:test jacoco:report
+```
+
+### Lesson 2 — Pass the covered-line report to the sub-agent, not the raw source
+
+Sub-agents had to re-discover the uncovered lines by reading source + running JaCoCo's HTML report. That discovery is fast for tiny classes (8 lines) but slow for 100+ line classes.
+
+**Fix:** the main agent parses the JaCoCo CSV (or HTML) for the target file's uncovered lines and passes the line numbers + a one-line description of each gap in the task prompt. The sub-agent's job becomes: "write tests for these specific lines."
+
+Example:
+
+```
+File: core/.../PromotionDiscount.java
+Current line coverage: 87.2% (34/39 lines)
+Uncovered lines:
+  - line 23: `if (splitQty.equals(finalizedQuantity))` — null pointer when splitQty is null
+  - line 41: `public boolean isFinalized() { return finalized; }` — default false path
+  - line 67: `split()` — remainder branch
+  - line 82: `resetQty()` — field overwrite
+  - line 95: `incrementQuantity()` — accumulator
+```
+
+### Lesson 3 — Sub-agent success criterion: CSV row delta, not self-reported %
+
+Sub-agent 5 reported "85.5% → 90%" but the actual delta was 0 — the tests it wrote exercised behavior lines but not the Spring-injection lines that were the actual gap. The self-reported % was wrong.
+
+**Fix:** the task prompt must require the sub-agent to read the post-run CSV directly and report the exact row, e.g.:
+
+```
+Success criterion (REQUIRED in your report):
+  Read /data/coverage-runs/<run-dir>/<repo>/<module>/target/site/jacoco/jacoco.csv
+  Find the row where column 3 == "<FileUnderTest>"
+  Report the exact: PACKAGE, CLASS, LINE_MISSED, LINE_COVERED values
+  The main agent will verify by re-reading the same CSV row.
+```
+
+This is verifiable from the outside — the sub-agent can't claim "100%" when the CSV says `LINE_COVERED=108, LINE_MISSED=2`.
+
+### Lesson 4 — Test files in `src/test/groovy/` are NOT auto-staged
+
+In the BroadleafCommerce repo, newly-created `.groovy` spec files in `src/test/groovy/` are NOT auto-included by Maven (good — that's expected) AND not auto-tracked by git (surprising). The sub-agent's tests ran successfully but the sub-agent didn't know the files needed `git add` to be committed.
+
+**Fix:** the task prompt must explicitly include a "stage your files" step before commit. The main agent should also run `git status` after each sub-agent finishes to verify their work is staged.
+
+Add to the sub-agent task:
+
+```
+After tests pass, stage your spec files:
+  git add <test-file-1> <test-file-2> ...
+  git status  # verify only test/ files are staged, no source files
+  git diff --cached --stat  # show what would be committed
+```
+
+### Lesson 5 — Wait for the runtime completion event; never synthesize it
+
+A premature completion event was synthesized for sub-agent 5 based on a stale surefire timestamp. The actual sub-agent was still running for another 4 minutes. This is a real failure mode — the sub-agent's wall-clock can exceed expectations, and "I saw tests pass in the log" is not the same as "the sub-agent returned."
+
+**Fix:** the main agent MUST wait for the runtime completion event (via `sessions_yield` or equivalent) for every spawned sub-agent. The event is the only source of truth for "this sub-agent is done." Local log evidence is not enough.
+
+If the sub-agent has been running for >15 minutes without an event:
+1. Check `subagents` action=list for status.
+2. If still running, yield again.
+3. If failed, decide: retry, abandon, or inline.
+4. NEVER declare a sub-agent done based on local file/log evidence alone.
+
+**Reference:** this lesson is filed in response to a real failure on 2026-06-08 where sub-agent 5 was synthesized as done at 8m17s but actually returned at 12m51s, with 4 minutes of work missed.
+
